# LeastAction

./: .dockerignore  .env.example  .gitignore  CLA.md  CONTRIBUTING.md  COOKIES.md  EULA.md  IMPRINT.md  LICENSE.md  LICENSE_EE.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  VULNERABILITY.md  blue-green-run.sh  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  docker-compose.test.yml  docker-compose.yml  keto.yml  main.py  namespaces.ts  pyproject.toml  pytest.ini  setup.py  sync_to_lite.py  tranform.py
backend/onboarding_setup/actions/AWS/: AWSEC2GitPullAndInstall.py  AWSS3KeyExists.py
backend/onboarding_setup/actions/DBT/: DBTImportModel.py
backend/onboarding_setup/actions/LeastActionLabs/: DBTImportModel.py  LeastActionAgentDebug.py  LeastActionCancelTask.py  LeastActionCheckIfLocalFileExists.py  LeastActionCheckIfParentsAreDone.py  LeastActionDebug.py  LeastActionDeleteItems.py  LeastActionGitToTask.py  LeastActionRunTask.py  LeastActionSMTPEmail.py  LeastActionScheduleTasks.py  LeastActionTaskToTableAsset.py  LeastActionWebhookNotify.py
backend/onboarding_setup/actions/Postgresql/: PostgresqlTestConnection.py  PostgresqlToClaudeChatToHtmlReportToAsset.py
backend/onboarding_setup/assets/: daily_revenue.py  monthly_revenue.py  yearly_revenue.py
backend/onboarding_setup/configs/Postgresql/: PostgresqlDemoWorkflow.py  PostgresqlSalesReportingForWorkflow.py
backend/onboarding_setup/connections/AWS/: AWSExecute.py  AWSResourceBilling.py  AWSS3ValidateAndNotify.py
backend/onboarding_setup/connections/DBT/: DbtServer.py  dbt_server.py
backend/onboarding_setup/connections/Github/: AWSEC2GitPull.py  GithubToken.py
backend/onboarding_setup/connections/LeastActionLabs/: EC2CloudWatchReportConnection.py  LeastActionMonitoringConnection.py
backend/onboarding_setup/connections/Postgresql/: Postgresql.py  PostgresqlPlusClaude.py  dbt_postgresql.py  dbt_postgresql_plus_claude.py
backend/onboarding_setup/connections/anthropic/: ClaudeApi.py
backend/onboarding_setup/operators/AWS/: AWSEC2RunShellCommand.py  AWSS3ValidateDataExists.py
backend/onboarding_setup/operators/Airflow/: AirflowDAGOperator.py
backend/onboarding_setup/operators/DBT/: DBTRunModel.py  DBTRunSelectModel.py
backend/onboarding_setup/operators/LeastActionLabs/: EC2CloudWatchReport.py  LeastActionDummy.py  LeastActionErrorAnalysis.py  LeastActionMonitoring.py  PostgresqlGenerateHtmlTableReport.py
backend/onboarding_setup/operators/Postgresql/: PostgresClaudeReportDebug.py  PostgresqlExecuteSQL.py  PostgresqlGenerateHtmlReport.py  PostgresqlGenerateHtmlTableReport.py  PostgresqlLoadTSVFromURL.py  PostgresqlValidatorSQL.py
backend/onboarding_setup/payloads/AWS/: AWSBilling.py  AWSRunTickerScript.py  AWSS3ValidateDataandNotify.py
backend/onboarding_setup/payloads/DBTBadgeAttendanceDemo/: 00_dbt_seed.py  01_stg_badge_events.py  02_int_badge_sessions.py  03_int_multiday_sessions.py  04_int_absent_badges.py  05_fct_attendance_daily.py  06_fct_attendance_weekly.py  07_mart_attendance_summary.py  08_report_daily_attendance.py  09_report_weekly_attendance.py  10_report_absent_summary.py  11_report_attendance_summary.py  12_report_student_attendance.py
backend/onboarding_setup/payloads/LeastActionLabs/: EC2CloudWatchReportPayload.py  LeastActionDummyPayload.py  LeastActionMonitoringPayload.py
backend/onboarding_setup/payloads/PostgresqlDemo/: create_sql.py  insert_sql.py  update_sql.py
backend/src/common/: config.py  env.py  exceptions.py  models.py  mutex.py  secrets.py  types.py  utils.py
backend/src/common/context_vars/: catalog_context.py  session_context.py  user_context.py
backend/src/common/decorators/: performance.py
backend/src/common/logger/: logger.py
backend/src/core/admin/: api_request.py  service.py
backend/src/core/ai/: __init__.py  prompts.py  schema.py  service.py
backend/src/core/api/: common.py  dependencies.py  router.py  service.py  test.py  utils.py
backend/src/core/catalog/: api_request.py  bootstrap.py  item_directory.py  items.md  link_schema.yml  links.md  orchestrator.py  pagination_constants.py  service.py
backend/src/core/celery/: README.md  app.py  client.py  config.py  schema.py  utils.py  worker_init.py
backend/src/core/cron/: README.md  cron_executor.py  cron_manager.py  schema.py
backend/src/core/dataplane/: executors.py  mcp_proxy.py
backend/src/core/db/: __init__.py  service.py  transaction.py  types.py
backend/src/core/ee/: errors.py  types.py  utils.py
backend/src/core/email/: schema.py  service.py
backend/src/core/iam/: AuthReadme.md
backend/src/core/logs_details/: __init__.py  service.py
backend/src/core/mcp/: agent.py  api_client.py  server.py
backend/src/core/task/: README.md  celery_orchestrator.py  schema.py  task_manager.py  task_validation_manager.py  utils.py
backend/src/core/validation/: config.py  schema.py  service.py
backend/src/core/version_manager/: service.py
backend/tests/integration/: README.md  conftest.py  schema.py  utils.py
backend/tests/integration/access/: test_check_access.py
backend/tests/integration/action/: __init__.py  test_execute_action.py  test_execute_action_with_connection.py  test_la_parents_done.py  test_task_control_action.py
backend/tests/integration/ai/: test_ai_generate.py
backend/tests/integration/auth/: test_auth.py
backend/tests/integration/catalog/: test_create_item.py  test_create_version.py  test_delete_item.py  test_get_CreateItemRequest_model.py  test_get_item_pagination.py  test_get_item_revisions.py  test_get_item_sorted_filtered.py  test_get_items.py  test_mcp.py  test_multiple_requests_at_same_time.py  test_schema_validations.py  test_user_update_fields.py  test_validation_api.py  test_version_bump.py  test_version_toggle.py
backend/tests/integration/cron/: test_cron_management.py  test_cron_toggle.py  test_tasks_ready_basic.py  test_tasks_ready_dates_states.py  test_tasks_ready_multi_project.py  test_tasks_ready_to_run.py  test_tasks_ready_workflows.py
backend/tests/integration/task/: __init__.py  test_bulk_e2e.py  (+13 more)
(+814 files in other folders)
